style: fix markdown line wrapping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -278,6 +278,7 @@ main {
 
 .prose p {
   margin-bottom: 1.25rem;
+  white-space: pre-wrap;
 }
 
 .prose ul,
